minor stylistic changes
changed some wording of 'about' page, title font, background for results

--- a/about.html
+++ b/about.html
@@ -1,12 +1,12 @@
 <div>
-  <p>
-  This is the <span class="brand">taubatron</span>,
-  a web application developed by <a href="http://www.linkedin.com/in/gregorybenison">Greg Benison</a>
-  inspired by the artwork of <a href="http://www.taubaauerbach.com">Tauba Auerbach</a>.
-  </p>
+  <ul id="credits">
+  <li>Developed by <a href="http://www.linkedin.com/in/gregorybenison">Greg Benison</a></li>
+  <li>Inspired by the art of <a href="http://www.taubaauerbach.com">Tauba Auerbach</a></li>
+  </ul>
   <!-- yesnomorph picture -->
   <a href="http://www.taubaauerbach.com/yesnomorph1.html">
-    <img src="media/yesnomorph-small.jpg"/>
+    <img src="media/yesnomorph-small.jpg"/><br/>
+    Tauba Auerbach, <i>Yes/No Morph I.</i> (2007)
   </a>
   <p>
     Supply two words, and it will transform one into the other
