applied 'MJT centering method' to various elements
Used Matthew James Taylor's float-based centering method to center
result text and Tauba's painting.

--- a/about.html
+++ b/about.html
@@ -4,10 +4,18 @@
   <li>Inspired by the art of <a href="http://www.taubaauerbach.com">Tauba Auerbach</a></li>
   </ul>
   <!-- yesnomorph picture -->
-  <a href="http://www.taubaauerbach.com/yesnomorph1.html">
-    <img src="media/yesnomorph-small.jpg"/><br/>
-    Tauba Auerbach, <i>Yes/No Morph I.</i> (2007)
-  </a>
+  <div class="centering">
+    <div>
+      <a href="http://www.taubaauerbach.com/yesnomorph1.html">
+	<div class="centering">
+	  <div>
+	    <img src="media/yesnomorph-small.jpg"/>
+	  </div>
+	</div>
+	Tauba Auerbach, <i>Yes/No Morph I.</i> (2007)
+      </a>
+    </div>
+  </div>
   <p>
     Supply two words, and it will transform one into the other
     by changing, inserting, or deleting one letter at a time.
