more colors, minor spacing
Applied custom colors to letters in the "Taubatron" title
by defining the word-apply-classes operation.

--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
   <!-- yesnomorph picture -->
   <div class="centering">
     <div>
-      <a href="http://www.taubaauerbach.com/yesnomorph1.html">
+      <a id="yesnomorph" href="http://www.taubaauerbach.com/yesnomorph1.html">
 	<div class="centering">
 	  <div>
 	    <img src="media/yesnomorph-small.jpg"/>
